--- a/index.html
+++ b/index.html
@@ -9,16 +9,22 @@
 <body>
     <div id="container">
         <div class="container-lights">
-            <div class="blue lights"></div>
-            <div class="red lights"></div>
-            <div class="yellow lights"></div>
-            <div class="green lights"></div>
-            <div class="rose lights"></div>
-            <div class="purple lights"></div>
-            <div class="orange lights"></div>
+            <div class="lights blue"></div>
+            <div class="lights red"></div>
+            <div class="lights yellow"></div>
+            <div class="lights green"></div>
+            <div class="lights rose"></div>
+            <div class="lights purple"></div>
+            <div class="lights orange"></div>
+        </div>
+        <div class="container-actions">
+            <div class="button-groups">
+                <button id="turn-on">on</button>
+                <button id="turn-off">off</button>
+            </div>
         </div>
 
-        
     </div>
+    <script src="/functionaties.js"></script>
 </body>
 </html>
