--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="intensity">
-                <input type="number" id="intensit" name="intensit" min="1" max="5" value="">
+                <input type="number" id="intensit" name="intensit" min="1" max="8" value="" placeholder="From 1 to 8">
                 <input type="submit" id="submit" name="" value="intensity" onclick="changeIntensity()">
             </div>
         </div>
