--- a/index.html
+++ b/index.html
@@ -18,13 +18,18 @@
             <div class="lights orange"></div>
         </div>
 
+        
+    </div>
+
+    <div id="container-box">
         <div class="container-actions">
+            <div class="title">
+                <h1 id="title">Welcome to Christmas Lights</h1>
+            </div>
             <div class="button-groups">
                 <button id="turn-on">on</button>
                 <button id="turn-off">off</button>
-            </div>
 
-            <div class="intensity">
                 <input type="number" id="intensit" name="intensit" min="1" max="8" value="" placeholder="From 1 to 8">
                 <input type="submit" id="submit" name="" value="intensity" onclick="changeIntensity()">
             </div>
